--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
-version: '3.8'
+version: "3.8"
 
 services:
   db:
     image: postgres:15
+    restart: always
     environment:
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: password
@@ -14,6 +15,7 @@ services:
 
   web:
     build: .
+    restart: always
     ports:
       - "8000:8000"
     environment:
